# lightnumpy

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  LICENSE  MANIFEST.in  README.md  SECURITY.md  meson.build  meson.options  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.devcontainer/: post_create_commands.sh
.github/workflows/: ci.yml  wheels.yml
docker/script/: safe_dirs.sh
docs/source/: faq.rst
lightnumpy/: __init__.py  _citation.py.in  cython.pxd  meson.build
lightnumpy/_build_utils/: __init__.py  system_info.py  version.py
lightnumpy/_c_core/: meson.build
lightnumpy/_c_core/include/: array.h  config_c_core.h  hello.h  math_ops.h  numpy_c.h  python_c.h  std_lib_c.h
lightnumpy/_c_core/src/: array.c  hello.c  math_ops.c
lightnumpy/_core/: __init__.py  meson.build
lightnumpy/_core/include/lightnumpy/: boost_math.h  config.h  hello.h  numpy.h  pybind.h  python.h
lightnumpy/_core/src/: dummymodule.c  hello.c  nc_version.cpp  np_test.c
lightnumpy/_cpp_core/: meson.build
lightnumpy/_cpp_core/include/: config_cpp_core.hpp  hello.hpp  numpy_cpp.hpp  python_cpp.hpp  std_lib_cpp.hpp  tensor.hpp  utilities.hpp
lightnumpy/_cpp_core/src/: array_ops.cpp  hello.cpp  nc_version.cpp  np_test.cpp  py_math.cpp  py_nc_random.cpp  tensor.cpp  utilities.cpp
lightnumpy/_gpu_core/: __init__.py  meson.build
lightnumpy/_gpu_core/include/: b.h  cuda_helpers.cuh  gpu_array_ops.cuh  gpu_ops.hpp
lightnumpy/_gpu_core/include/numC++/: README.md  customKernels.cuh  gpuConfig.cuh  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh  utils.cuh
lightnumpy/_gpu_core/src/: b.cu  cuda_helpers.cu  gpuConfig.cu  gpu_array_ops.cu  gpu_ops.cu
lightnumpy/_tpu_core/include/: tpu_helpers.hpp  tpu_ops.hpp
lightnumpy/_tpu_core/src/: tpu_helpers.cpp  tpu_ops.cpp
lightnumpy/c_core/src/: add.c  array_ops.c  subtract.c
lightnumpy/cpp_core/: meson.build
lightnumpy/cpp_core/src/: add.cpp  array_ops.cpp  subtract.cpp
lightnumpy/cy_bindings/: __init__.py  cy_numcpp_api.pxd  cy_numcpp_api.pxi  cy_numcpp_api.pyi  cy_numcpp_api.pyx  meson.build
lightnumpy/cy_bindings/src/: array_cy.pyx  cython_helpers.pxd  gpu_cy.pyx  linalg_cy.pyx  tpu_cy.pyx  utils_cy.pyx
lightnumpy/py_bindings/: __init__.py  meson.build
lightnumpy/py_bindings/src/: c_bindings.c  cpp_bindings.cpp  gpu_bindings.cu  py_gpu_numcpp_api.cpp  py_math.cpp  py_nc_random.cpp  py_numcpp_api.cpp  pybind_module.cpp  pybind_utils.cpp  tpu_bindings.cpp
lightnumpy/python_api/: __init__.py  _utils_impl.py  array.py  core.py  gpu_operations.py  linalg.py  operations.py  tpu_operations.py  utils.py
lightnumpy/tests/: test_core.py  test_python_api.py
requirements/: all.txt  build.txt  ci32_requirements.txt  core.txt  default.txt  dev.txt  docs.txt  emscripten_test_requirements.txt  gpu.txt  maintenance.txt  test.txt  tpu.txt
tools/citation/: citation_ref.py
tools/subprojects/: template.wrap
