[build-system]
build-backend = "mesonpy"
requires = [
  "meson>=1.5.0",          # The Meson build system itself to coordinate the compilation of code.
  "ninja>=1.11.0",         # The ninja build system used to compile code
  "meson-python>=0.16.0",  # A PEP 517 backend for building Python packages with Meson.
  "Cython>=3.0.10",
  "pybind11==2.13.2",
  # numpy requirement for wheel builds for distribution on PyPI - building
  # against 2.x yields wheels that are also compatible with numpy 1.x at
  # runtime.
  # Note that building against numpy 1.x works fine too - users and
  # redistributors can do this by installing the numpy version they like and
  # disabling build isolation.
  "numpy>=2.1.0",
  # Add other dependencies here if needed
  "pythran>=0.14.0",
  "scipy>=1.6.0",
]

[project]
name = "lightnumpy"
dynamic = ["version"]  # The version is determined dynamically, inside meson.build
description = "A lightweight library for array operations with CPU, GPU, and TPU support."
readme = "README.md"
# TODO: add `license-files` once PEP 639 is accepted (see meson-python#88)
# at that point, no longer include them in `py3.install_sources()`
license = {file = "LICENSE"}
authors = [
    # {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
